@@ -255,6 +255,7 @@ function listCampaign($pDB, $smarty, $module_name, $local_templates_dir)
         'MESSAGE_CONTINUE_DELETE'       =>  _tr("Are you sure you wish to delete campaign?"),
     ));
     $oGrid = new paloSantoGrid($smarty);
+    $oGrid->addNew("?menu=$module_name&action=new_campaign",_tr('Create New Campaign'),true);
     $oGrid->showFilter($smarty->fetch("$local_templates_dir/filter-list-campaign.tpl"));
     $sContenido = $oGrid->fetchGrid($arrGrid, $arrData,$arrLang);
     if (strpos($sContenido, '<form') === FALSE)
@@ -343,6 +344,10 @@ function formEditCampaign($pDB, $smarty, $module_name, $local_templates_dir, $id
         }
     }
 
+    $arrUrlsExternos = array(
+        ''  =>  _tr('(No external URL)'),
+    ) + $oCamp->getExternalUrls();
+
     // Cargar la información de todos los formularios creados y activos
     $oDataForm = new paloSantoDataForm($pDB); 
     $arrDataForm = $oDataForm->getFormularios(NULL,'A');
@@ -350,21 +355,22 @@ function formEditCampaign($pDB, $smarty, $module_name, $local_templates_dir, $id
     // Impedir mostrar el formulario si no se han definido colas o no
     // quedan colas libres para usar en campañas salientes.
     if (count($arrQueues) <= 0) {
-        $formCampos = getFormCampaign($arrDataTrunks, $arrDataQueues, NULL, NULL);
+        $formCampos = getFormCampaign($arrDataTrunks, $arrDataQueues, NULL, NULL, NULL);
         $oForm = new paloForm($smarty, $formCampos);
         $smarty->assign('no_queues', 1);
     } elseif (count($arrDataQueues) <= 0) {
-        $formCampos = getFormCampaign($arrDataTrunks, $arrDataQueues, NULL, NULL);
+        $formCampos = getFormCampaign($arrDataTrunks, $arrDataQueues, NULL, NULL, NULL);
         $oForm = new paloForm($smarty, $formCampos);
         $smarty->assign('no_outgoing_queues', 1);
     } elseif (count($arrDataForm) <= 0) {
-        $formCampos = getFormCampaign($arrDataTrunks, $arrDataQueues, NULL, NULL);
+        $formCampos = getFormCampaign($arrDataTrunks, $arrDataQueues, NULL, NULL, NULL);
         $oForm = new paloForm($smarty, $formCampos);
         $smarty->assign('no_forms', 1);
     } else {
         $smarty->assign('label_manage_trunks', _tr('Manage Trunks'));
         $smarty->assign('label_manage_queues', _tr('Manage Queues'));
         $smarty->assign('label_manage_forms',  _tr('Manage Forms'));
+        $smarty->assign('label_manage_external_url', _tr('Manage External URLs'));
         
         // Definición del formulario de nueva campaña
         $smarty->assign("REQUIRED_FIELD", _tr("Required field"));
@@ -415,6 +421,7 @@ function formEditCampaign($pDB, $smarty, $module_name, $local_templates_dir, $id
             } else {
                 $values_form = explode(",", $_POST['values_form']);
             }
+            if (!isset($_POST['external_url']))        $_POST['external_url']        = $arrCampaign[0]['id_url'];
         }
 
         // rte_script es un HTML complejo que debe de construirse con Javascript.
@@ -429,7 +436,8 @@ function formEditCampaign($pDB, $smarty, $module_name, $local_templates_dir, $id
         }
 
         // Generación del objeto de formulario
-        $formCampos = getFormCampaign($arrDataTrunks, $arrDataQueues, $arrNoElegidos, $arrElegidos);
+        $formCampos = getFormCampaign($arrDataTrunks, $arrDataQueues,
+            $arrNoElegidos, $arrElegidos, $arrUrlsExternos);
         $oForm = new paloForm($smarty, $formCampos);
         if (!is_null($id_campaign)) {
             $oForm->setEditMode();
@@ -496,7 +504,8 @@ function formEditCampaign($pDB, $smarty, $module_name, $local_templates_dir, $id
                                             $time_ini,
                                             $time_fin,
                                             $_POST['rte_script'],
-                                            $_POST['queue']);
+                                            $_POST['queue'],
+                                            ($_POST['external_url'] == '') ? NULL : (int)$_POST['external_url']);
                             if (is_null($id_campaign)) $bExito = FALSE;
                         } elseif ($bDoUpdate) {
                             $bExito = $oCamp->updateCampaign(
@@ -511,7 +520,8 @@ function formEditCampaign($pDB, $smarty, $module_name, $local_templates_dir, $id
                                             date('Y-m-d', $iFechaFin),
                                             $time_ini,
                                             $time_fin,
-                                            $_POST['rte_script']);
+                                            $_POST['rte_script'],
+                                            ($_POST['external_url'] == '') ? NULL : (int)$_POST['external_url']);
                         }
                         
                         // Introducir o actualizar formularios
@@ -558,7 +568,8 @@ function formEditCampaign($pDB, $smarty, $module_name, $local_templates_dir, $id
     return $contenidoModulo;
 }
 
-function getFormCampaign($arrDataTrunks, $arrDataQueues, $arrSelectForm, $arrSelectFormElegidos)
+function getFormCampaign($arrDataTrunks, $arrDataQueues, $arrSelectForm,
+    $arrSelectFormElegidos, $arrUrlsExternos)
 {
     $horas = array();
     $i = 0;
@@ -720,6 +731,14 @@ function getFormCampaign($arrDataTrunks, $arrDataQueues, $arrSelectForm, $arrSel
             "INPUT_EXTRA_PARAM"      => "",
             "VALIDATION_TYPE"        => "text",
             "VALIDATION_EXTRA_PARAM" => ""
+        ),
+        'external_url'       => array(
+            "LABEL"                  => _tr("External URLs"),
+            "REQUIRED"               => "no",
+            "INPUT_TYPE"             => "SELECT",
+            "INPUT_EXTRA_PARAM"      => $arrUrlsExternos,
+            "VALIDATION_TYPE"        => "text",
+            "VALIDATION_EXTRA_PARAM" => "",
         ),
     );
 
