@@ -105,11 +105,18 @@ var rte_script = new richTextEditor('rte_script');
             </td>
 	  </tr>
       <tr  height='30'>
-		<td align='right'>{$trunk.LABEL}: <span  class="required">*</span><br><br>
-		<a href="?menu=pbxconfig&amp;display=trunks">
-		<b>{$label_manage_trunks}</b></a><br><hr>
+		<td align='right'>{$external_url.LABEL}:<br><br>
+		<a href="?menu=external_url">
+		<b>{$label_manage_external_url}</b></a><br><hr>
 		</td>
-		<td valign="top" colspan='2'>{$trunk.INPUT}{if $label_manage_trunks}&nbsp;{/if}</td>
+		<td valign="top" colspan='2'>{$external_url.INPUT}{if $label_manage_external_url}&nbsp;{/if}</td>
+      </tr>
+      <tr  height='30'>
+        <td align='right'>{$trunk.LABEL}: <span  class="required">*</span><br><br>
+        <a href="?menu=pbxconfig&amp;display=trunks">
+        <b>{$label_manage_trunks}</b></a><br><hr>
+        </td>
+        <td valign="top" colspan='2'>{$trunk.INPUT}{if $label_manage_trunks}&nbsp;{/if}</td>
       </tr>
       <tr  height='30'>
 		<td align='right'>{$max_canales.LABEL}: <span  class="required">*</span></td>
